--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,7 @@
+body{
+  background-color: #fff;
+}
+
 .svg-bg {
   /* background-color: #c1e4f5;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='160' height='160' viewBox='0 0 200 200'%3E%3Cpolygon fill='%23DCEFFA' fill-opacity='0.29' points='100 0 0 100 100 100 100 200 200 100 200 0'/%3E%3C/svg%3E"); */
